--- a/.htaccess
+++ b/.htaccess
@@ -12,5 +12,9 @@ RewriteRule ^(.*)$ $1.html [L]
 RewriteCond %{DOCUMENT_ROOT}/$1 -f
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
 
-# Wenn die oben genannten Bedingungen nicht erfüllt sind, leite zur 404.html um
+# ERROR HANDLING
 ErrorDocument 404 /404.html
+ErrorDocument 403 /403.html
+ErrorDocument 500 /500.html
+ErrorDocument 502 /502.html
+ErrorDocument 503 /503.html
