--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node dist/index.ts",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -43,6 +44,17 @@
     "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/body-parser": "^1.19.3",
+    "@types/cors": "^2.8.14",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.18",
+    "@types/express-session": "^1.17.8",
+    "@types/mongoose": "^5.11.97",
+    "@types/passport": "^1.0.13",
+    "@types/passport-facebook": "^3.0.1",
+    "@types/passport-google-oauth20": "^2.0.12",
+    "@types/passport-local-mongoose": "^6.1.2",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
